2014-10-17  Karl Berry  <karl@tug.org>

	* line.c (getc, FLOCKFILE, FUNLOCKFILE): #define to getc_unlocked, etc.
	(get_line): call them, so we lock once per call instead of
	once per character read.  Change from Adam Maxwell <amaxwell@mac.com>.
	https://email.esm.psu.edu/pipermail/macosx-tex/2014-October/053026.html

2014-09-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmf.cnf (TEX.upmpost): Added.

2014-08-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* knj.c (win32_fputs): Drop unused variables.

2014-08-22  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* knj.c: Update fsyscp_popen().

2014-08-22  TANAKA Takuji  <KXD02663@nifty.ne.jp>

	* knj.[ch], c-std.h, config.h: Add a new function win32_vfprintf()
	(Windows only)

2014-07-22  Karl Berry  <karl@tug.org>

	* tex-file.h,
	* tex-file.c (kpathsea_init_format_return_varlist): new fn
	to expose list of environment/config variable names considered.
	* kpsewhich.c (help_message): use it.

2014-07-18  Karl Berry  <karl@tug.org>

	* mktex.opt: don't basename-ify the program name, that's
	potentially useful information.
	
	* mktexdir,
	* mktexlsr, 
	* mktexmf,
	* mktexnam,
	* mktexpk,
	* mktextfm,
	* mktexupd: prepend to PATH via a simple method for Unix
	(but leave the complicated DOS version in mktexlsr).

2014-07-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tex-make.c, win32lib.c: Replace the deprecated spawnvp() by
	_spawnvp(), they differ for 64-bit MinGW.

2014-07-13  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* debug.c, hash.c, knj.c, tex-make.c: [WIN64] Avoid cast from
	pointer to integer of different size.

2014-06-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mingw32.h: Require WINVER >= 0x0500.

2014-06-20  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* win32lib.c: Fix a potential bug (w32 only).

2014-06-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* c-ctype.h: Avoid useless char subscript warnings.

2014-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>
